Removing dot operator and making equal operatorbigger

--- a/index.html
+++ b/index.html
@@ -9,29 +9,27 @@
   </head>
   <body>
     <div class="calculator">
-      <div class="output">734</div>
+      <div class="output"></div>
       <div class="first-row">
         <div class="empty-div"></div>
         <div class="key clear">C</div>
       </div>
-
       <div class="input">
         <kbd class="key number">7</kbd>
         <kbd class="key number">8</kbd>
         <kbd class="key number">9</kbd>
-        <kbd class="key operation" data-operation="/">/</kbd>
+        <kbd class="key operator" data-action="divide">/</kbd>
         <kbd class="key number">4</kbd>
         <kbd class="key number">5</kbd>
         <kbd class="key number">6</kbd>
-        <kbd class="key operation" data-operation="*">*</kbd>
+        <kbd class="key operator" data-action="multiply">*</kbd>
         <kbd class="key number">1</kbd>
         <kbd class="key number">2</kbd>
         <kbd class="key number">3</kbd>
-        <kbd class="key operation" data-operation="-">-</kbd>
-        <kbd class="key number" data-operation=".">.</kbd>
+        <kbd class="key operator" data-action="subtract">-</kbd>
         <kbd class="key number">0</kbd>
-        <kbd class="key operation" data-operation="=">=</kbd>
-        <kbd class="key operation" data-operation="+">+</kbd>
+        <kbd class="key  equal">=</kbd>
+        <kbd class="key operator" data-action="add">+</kbd>
       </div>
     </div>
     <script src="app.js"></script>
